--- a/susy/index.html
+++ b/susy/index.html
@@ -9,12 +9,12 @@
 	</head>
 	<body>
 		<ul class="gallery">
-			<li>item 1</li>
-			<li>item 2</li>
-			<li>item 3</li>
-			<li>item 4</li>
-			<li>item 5</li>
-			<li>item 6</li>
+			<li><h4>item 1</h4></li>
+			<li><h4>item 2</h4></li>
+			<li><h4>item 3</h4></li>
+			<li><h4>item 4</h4></li>
+			<li><h4>item 5</h4></li>
+			<li><h4>item 6</h4></li>
 		</ul>
 	</body>
 </html>
