--- a/susy/index.html
+++ b/susy/index.html
@@ -8,13 +8,15 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">		
 	</head>
 	<body>
-		<ul class="gallery">
-			<li><h4>item 1</h4></li>
-			<li><h4>item 2</h4></li>
-			<li><h4>item 3</h4></li>
-			<li><h4>item 4</h4></li>
-			<li><h4>item 5</h4></li>
-			<li><h4>item 6</h4></li>
-		</ul>
+		<div id="wrapper">
+			<ul class="gallery">
+				<li><h4>item 1</h4></li>
+				<li><h4>item 2</h4></li>
+				<li><h4>item 3</h4></li>
+				<li><h4>item 4</h4></li>
+				<li><h4>item 5</h4></li>
+				<li><h4>item 6</h4></li>
+			</ul>
+		</div>
 	</body>
 </html>
